<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="31dp"
        android:contentDescription="@string/todo"
        android:textColor="@color/dark"
        android:visibility="invisible"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/imageView3"
        android:layout_marginTop="59dp"
        android:background="@drawable/rounded_white"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:textColor="@color/dark"
        />

    <EditText
        android:id="@+id/secondName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        android:hint="@string/secondName"
        android:ems="10"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:layout_alignLeft="@id/name"
        android:layout_alignRight="@id/name"
        android:paddingLeft="15dp"
        android:background="@drawable/rounded_white"
        android:textColor="@color/dark"/>

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/secondName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/e_mail"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:layout_alignLeft="@id/name"
        android:layout_alignRight="@id/name"
        android:paddingLeft="15dp"
        android:background="@drawable/rounded_white"
        android:textColor="@color/dark"/>

    <EditText
        android:id="@+id/pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:layout_alignLeft="@id/name"
        android:layout_alignRight="@id/name"
        android:paddingLeft="15dp"
        android:background="@drawable/rounded_white"
        android:textColor="@color/dark"/>

    <EditText
        android:id="@+id/confirmPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confirmPassword"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:layout_alignLeft="@id/name"
        android:layout_alignRight="@id/name"
        android:paddingLeft="15dp"
        android:background="@drawable/rounded_white"
        android:textColor="@color/dark"/>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/sigh_up"
        android:layout_alignLeft="@id/confirmPwd"
        android:layout_alignRight="@id/confirmPwd"
        android:background="@drawable/rounded_dark"
        android:textColor="@color/sky"
        android:textSize="18sp"
        android:textStyle="bold"/>


</RelativeLayout>