<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ilyas.skyscanner.LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="31dp"
        android:contentDescription="@string/todo"
        android:visibility="invisible"
        app:srcCompat="@drawable/logo" />

    <AutoCompleteTextView
        android:id="@+id/signInEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signInPwd"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:padding="7dp"
        android:background="@drawable/rounded_white"
        android:drawableLeft="@drawable/ic_user_icon"
        android:drawablePadding="5dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp" />

    <AutoCompleteTextView
        android:id="@+id/signInPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signInEmail"
        android:layout_alignStart="@+id/signInEmail"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:background="@drawable/rounded_white"
        android:padding="7dp"
        android:drawableLeft="@drawable/ic_password_icon"
        android:drawablePadding="5dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signInEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:text="@string/sign_in"
        android:textColor="#3b4046"
        android:textSize="25sp" />

    <Button
        android:id="@+id/signIn_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInPwd"
        android:layout_alignLeft="@+id/signInPwd"
        android:layout_alignRight="@+id/signInPwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:background="@drawable/rounded_dark"
        android:padding="5dp"
        android:text="@string/sign_in_upper"
        android:textColor="@color/sky"
        android:textSize="19sp"
        android:textStyle="bold"
        />
</RelativeLayout>
