<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="31dp"
        android:contentDescription="@string/todo"
        android:visibility="invisible"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/google_api"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="41dp"
        android:background="@drawable/rounded_dark"
        android:text="@string/sigh_up"
        android:textColor="@color/sky"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView3"
        android:layout_marginTop="173dp"
        android:gravity="center"
        android:text="@string/via_api"
        android:textSize="20sp"
        android:textColor="@color/dark"
        android:textStyle="bold"
        />

    <ImageButton
        android:id="@+id/google_api"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="17dp"
        android:background="@drawable/ic_google" />

    <ImageButton
        android:id="@+id/vk_api"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/google_api"
        android:layout_centerHorizontal="true"
       android:background="@drawable/ic_vk" />

    <ImageButton
        android:id="@+id/facebook_api"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/textView4"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignTop="@+id/vk_api"
        android:background="@drawable/ic_facebook" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/google_api"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:gravity=""
        android:text="@string/signedin"
        android:textSize="20sp"
        android:textColor="@color/dark"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:background="@drawable/rounded_dark"
        android:text="@string/sign_in"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/sky"
        />

</RelativeLayout>